tests/ui/conditional-compilation/cfg_accessible-unstable.rs
#[cfg_accessible(std)] //~ ERROR use of unstable library feature `cfg_accessible`
fn main() {}
